Changes for 2.4.7rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, French, Italian, Russian and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-9666] fixed invalid SNMP dynamic index cache if 2 SNMP agents have the same IP, port and OID (dimir, igors, Sandis)
...G...... [ZBX-9430] fixed Windows eventlog item incorrectly interpreting 0x00000103 return value as an error (wiper)
.......PS. [ZBX-9655] fixed crash if MYSQL connection object initialization failed (wiper)
........S. [ZBX-9667] fixed disabled triggers or trigers having disabled hosts or items affecting trigger dependency calculations (wiper)
A......... [ZBX-9738] fixed deletion of related action operations when deleting a host group (Gunars)
..F....... [ZBX-9625] fixed interface list bug in host form (Gunars)
..F....... [ZBX-9607] fixed step form in web scenario (Gunars, Sasha)
.......PS. [ZBX-9668] improved handling of VMware performance counter instances without data (wiper)
........S. [ZBX-9677] fixed compilation warnings in the escalator.c module (igors)
...G...PS. [ZBX-9682] fixed parsing of the numeric item key parameters (igors)
..F....... [ZBX-9516] fixed "Go" button display after deleting applications (Gunars)
..F....... [ZBX-9639] fixed chart width validation (Gunars)
..F....... [ZBX-9809] fixed action operation validation (Gunars)
...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
...G...... [ZBX-9258] fixed Alias for log[], logrt[] and eventlog[] (gleb)
.......PS. [ZBX-4284] improved handling of timeouting items on reachable hosts (wiper)
...G...... [ZBX-9721] fixed agent log message for log[] item in case of log records longer than 256kB (gleb)
..F....... [ZBX-9631] fixed "Undefined offset" in the actions conditions and lld rule filters when using a custom expression with more than 26 elements (Gunars, Sasha)